    copy/paste.
  * Ship syslinux files via template directory because the syslinux
    version (1:3.31-4) in Debian/etch is broken. :(
    Drop syslinux from Depends.
  * Mention -u option if using the option by accident and the chroot
    does not exist yet.
  * Update buildd/cleanup.sh and add buildd/files/.logo.png, 
    buildd/files/.style.css, buildd/files/HEADER.html and
    buildd/link_latest.sh (create symlinks for latest snapshot ISOs).


 -- Michael Prokop <mika@grml.org>  Sun, 09 Dec 2007 17:28:01 +0100

grml-live (0.0.11) unstable; urgency=low

  * New option -z to use ZLIB instead of LZMA compression and
    support SQUASHFS_OPTIONS in configuration file.
  * Add new class XORG.
  * Add X.org packages to GRML_MEDIUM.
  * Make sure /etc/X11/X is not a symlink to /bin/true. Check and fix
    via /etc/grml/fai/config/scripts/GRMLBASE/32-xorg.
  * Adjust grml-buildd for new logdir structure.
  * Add new script /etc/grml/fai/config/scripts/GRMLBASE/40-deborphan
    which adds shadowfs and bsdtar to the 'never report'-list of deborphan.
  * Diplay use of $LOCAL_CONFIG in configuration dialog.
  * Remove fai's last-dirinstall and last-softupdate when using
    ZERO_FAI_LOGFILE as well.
  * Depend on fai-client (>= 3.2.4), fai-server (>= 3.2.4) as version
    3.2.3 has a serious bug.
  * Add new packages to GRML_FULL:
    - atl2-modules-2.6.23-grml
    - firmware-ralink (replaces firmware-rt61 and firmware-rt73)
    - firmware-rt61
    - firmware-rt73
    - mlocate
    - open-vm-tools
    - pcaputils
    - xrestop
    - xserver-xorg-video-radeonhd
    - yatm
  * Remove tinysnmp-tools from GRML_{SMALL,FULL,MEDIUM}, see #444723.

 -- Michael Prokop <mika@grml.org>  Mon, 26 Nov 2007 15:07:54 +0100

grml-live (0.0.10) unstable; urgency=low

  * Drop patches which are part of FAI 3.2.3 now. Depend on
    FAI version 3.2.3 therefor.
  * FAI 3.2.3 has a new log schema, adjusted grml-live accordingly.
    Quoting the NEWS file of FAI: