@@ -11,7 +11,6 @@ debconf-utils
 deborphan
 eject
 file
-grml
 grml2hd
 grml2hd-utils
 grml2usb
